# Astra

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  ecosystem-automation.yml  ecosystem-test.yml  package-build.yml  release.yml
builder/: Cargo.toml
builder/src/: builder.rs  error.rs  lib.rs  recipe.rs
cmd/astra/: Cargo.toml
cmd/astra/src/: commands.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  manager.rs
crypto/: Cargo.toml
crypto/src/: error.rs  keyring.rs  lib.rs  sign.rs  verify.rs
db/: Cargo.toml
db/src/: database.rs  error.rs  lib.rs
docs/: contributing.md  ecosystem-operations-manual.md  package-format.md  repository-format.md  security.md
examples/hello/: Astrafile.yaml
examples/hello/files/usr/share/doc/hello/: README.md
examples/samplepkg/: Astrafile.yaml
examples/samplepkg/files/usr/share/doc/samplepkg/: README.md
pkg/: Cargo.toml
pkg/src/: error.rs  lib.rs  metadata.rs  package.rs
repo/: Cargo.toml
repo-server/: Cargo.toml
repo-server/src/: lib.rs  server.rs
repo/src/: client.rs  error.rs  index.rs  lib.rs
resolver/: Cargo.toml
resolver/src/: error.rs  lib.rs  resolver.rs
scripts/ops/: dashboard.ps1  final-verify.ps1  lifecycle-e2e.ps1  pr-merge-safe.ps1  setup-gpg-github.ps1  toggle-ruleset.ps1
tests/: Cargo.toml  integration_test.rs
