[package]
name = "astra-crypto"
description = "Cryptographic signing and verification for Astra packages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
