[package]
name = "astra-repo"
description = "Repository client for Astra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
astra-pkg.workspace = true
astra-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
url.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tempfile.workspace = true
