[package]
name = "astra-resolver"
description = "Dependency resolver for Astra packages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
astra-pkg.workspace = true
semver.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
