[package]
name = "astra-tests"
version = "0.0.0"
edition = "2021"
publish = false

[[test]]
name = "integration_test"
path = "integration_test.rs"

[dev-dependencies]
astra-core.workspace = true
astra-crypto.workspace = true
astra-pkg.workspace = true
astra-db.workspace = true
astra-resolver.workspace = true
astra-repo.workspace = true
astra-builder.workspace = true
chrono.workspace = true
semver.workspace = true
serde_json.workspace = true
tempfile.workspace = true
